Updated css and design as per UX and added API call for forgot password

--- a/src/components/forgotPassword/ForgotPassword.scss
+++ b/src/components/forgotPassword/ForgotPassword.scss
@@ -1,4 +1,4 @@
-@import "../../utils/variables.scss";
+@import '../../utils/variables.scss';
 
 .row.FORGOT-PASSWORD {
   .forgot-password-container {
@@ -8,7 +8,7 @@
     height: 600px;
     width: auto;
     border-radius: 0px;
-    background: linear-gradient(180deg, #0F2D58 0%, #2C5797 55.91%);
+    background: whitesmoke;
     border-radius: 0px;
     position: relative;
     padding: 20px;
@@ -27,7 +27,7 @@
     letter-spacing: 0px;
     text-align: center;
     position: relative;
-    color: #FFFFFF;
+    color: black;
     margin-bottom: 20px;
     height: auto;
     width: auto;
@@ -36,7 +36,6 @@
   }
 
   .forgot-password-content {
-
     height: auto;
     width: auto;
     left: auto;
@@ -48,7 +47,7 @@
     text-align: center;
     font-family: 'Noto Sans';
     font-style: normal;
-    color: #FFFFFF;
+    color: black;
     margin-bottom: 20px;
   }
 
@@ -59,27 +58,25 @@
     width: 100%;
     max-width: 540px;
     border-radius: 8px;
-    background: #FFFFFF;
+    background: #ffffff;
     position: relative;
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.147044);
     padding: 20px;
     box-sizing: border-box;
+    border: 1px solid black;
   }
 
   .label {
     height: auto;
     width: auto;
     left: auto;
-    top: auto; 
-    font-family: 'Nunito Sans';
-    font-style: normal;
+    top: auto;
     font-size: 14px;
     font-weight: 400;
     line-height: 19px;
     letter-spacing: 0px;
     text-align: left;
     position: relative;
-    mix-blend-mode: normal;
     opacity: 0.9;
     margin-bottom: 20px;
   }
@@ -90,7 +87,7 @@
     height: 48px;
     width: 100%;
     border-radius: 8px;
-    background: #F6F6F6;
+    background: #f6f6f6;
     position: relative;
   }
 
@@ -100,24 +97,29 @@
     height: 48px;
     width: 100%;
     border-radius: 8px;
-    background: #FF3E06;
-    border: 1px solid #FF3E06;
+    background-color: #ff3c00;
+    border: 1px solid #ff3e06;
     position: relative;
   }
 
+  button:disabled {
+    cursor: not-allowed;
+    pointer-events: all !important;
+  }
   .submit-button {
     left: auto;
     top: auto;
     height: 48px;
     width: 100%;
     border-radius: 8px;
-    font-family: 'Noto Sans';
     font-style: normal;
     line-height: 20px;
     letter-spacing: 0px;
     text-align: center;
     position: relative;
-    color: #FFFFFF;
+    color: #ffffff;
+    background-color: #ff3c00;
+    border: 1px solid #ff3e06;
   }
 
   // Media queries for responsiveness
