--- a/src/components/forgotPasswordMessage/ForgotPasswordMessage.scss
+++ b/src/components/forgotPasswordMessage/ForgotPasswordMessage.scss
@@ -1,12 +1,10 @@
-@import "../../utils/variables.scss";
+@import '../../utils/variables.scss';
 
-.row.FORGOT-PASSWORD-Message{
-
-  .forgot-password-message-container{
+.row.FORGOT-PASSWORD-Message {
+  .forgot-password-message-container {
     height: 600px;
     border-radius: 0px;
-    background: linear-gradient(180deg, #0F2D58 0%, #2C5797 55.91%);
-   // background: #FFFFFF;
+    background: whitesmoke;
     position: relative;
     padding: 20px;
     box-sizing: border-box;
@@ -15,21 +13,20 @@
     align-items: center;
   }
 
-  .email-icon-header{
+  .email-icon-header {
     height: 64px;
     width: 64px;
     left: 0px;
     top: 120px;
     border-radius: 80px;
-    background: #FFFFFF29;
-    box-shadow: 0px 4px 5px 0px #0000000D;
+    background: grey;
     position: relative;
     /* Card Shadow */
     border-radius: 80px;
     align-items: center;
   }
 
-  .email-icon{
+  .email-icon {
     height: 32px;
     width: 32px;
     left: 16px;
@@ -40,9 +37,9 @@
     align-items: center;
   }
 
-  .vector-icon{
+  .vector-icon {
     border-radius: 0px;
-    background: #FFFFFF;
+    background: #ffffff;
     position: absolute;
     background: url(../../assets/images/Vector.png);
     left: 8.33%;
@@ -51,7 +48,7 @@
     bottom: 16.67%;
   }
 
-  .vector-border{
+  .vector-border {
     height: 32px;
     width: 32px;
     left: 0px;
@@ -60,7 +57,7 @@
     position: absolute;
   }
 
-  .message-content{
+  .message-content {
     height: 19px;
     width: auto;
     left: auto;
@@ -74,7 +71,7 @@
     text-align: center;
     position: relative;
     /* identical to box height */
-    color: #FFFFFF;
+    color: black;
   }
 
   .message-content a:visited {
@@ -87,13 +84,13 @@
     text-align: center;
     position: relative;
     /* identical to box height */
-    color: #FFFFFF;
-}
-  .message-content a:link{
-    color: #FFFFFF;
+    color: black;
+  }
+  .message-content a:link {
+    color: black;
   }
 
-  .message-content-1{
+  .message-content-1 {
     height: 19px;
     width: auto;
     left: auto;
@@ -106,7 +103,7 @@
     letter-spacing: 0px;
     text-align: center;
     position: relative;
-    color: #FFFFFF;
+    color: black;
   }
 
   .message-content-1 a:visited {
@@ -118,13 +115,13 @@
     letter-spacing: 0px;
     text-align: center;
     position: relative;
-    color: #FFFFFF;
+    color: black;
   }
-  .message-content-1 a:link{
-    color: #FFFFFF;
+  .message-content-1 a:link {
+    color: black;
   }
 
-  .message-content-2{
+  .message-content-2 {
     height: 38px;
     width: auto;
     left: auto;
@@ -138,10 +135,10 @@
     text-align: center;
     position: relative;
     font-style: normal;
-    color: #FFFFFF;
+    color: black;
   }
 
-  .message-content-3{
+  .message-content-3 {
     height: 38px;
     width: auto;
     left: auto;
@@ -156,46 +153,39 @@
     position: relative;
     font-style: normal;
     /* identical to box height */
-    color: #FFFFFF; 
+    color: black;
   }
 
-    // Media queries for responsiveness
-    @media (max-width: 768px) {
-      .forgot-password-message-container {
-        height: 600px;
-        padding: 10px;
-        max-width: 1200px;
-
-      }
-  
-      .message-outside-container-1 {
-        max-width: 100%;
-      }
-
-      .message-outside-container-2 {
-        max-width: 100%;
-      }
-
-
-      
+  // Media queries for responsiveness
+  @media (max-width: 768px) {
+    .forgot-password-message-container {
+      height: 600px;
+      padding: 10px;
+      max-width: 1200px;
     }
-  
-    @media (max-width: 575px) {
-      .forgot-password-message-container {
-        padding: 10px;
-        max-width: 1200px;
-      }
-  
-      .message-outside-container-1 {
-        width: 100%;
-        max-width: 100%;
-      }
 
-      .message-outside-container-2 {
-        max-width: 100%;
-      }
-
-
-
+    .message-outside-container-1 {
+      max-width: 100%;
     }
+
+    .message-outside-container-2 {
+      max-width: 100%;
+    }
+  }
+
+  @media (max-width: 575px) {
+    .forgot-password-message-container {
+      padding: 10px;
+      max-width: 1200px;
+    }
+
+    .message-outside-container-1 {
+      width: 100%;
+      max-width: 100%;
+    }
+
+    .message-outside-container-2 {
+      max-width: 100%;
+    }
+  }
 }
