fixed padding issue

--- a/src/components/forgotPassword/ForgotPassword.scss
+++ b/src/components/forgotPassword/ForgotPassword.scss
@@ -17,7 +17,9 @@
     flex-direction: column;
     align-items: center;
   }
-
+  .col-forgot-password {
+    padding: 0%;
+  }
   .forgot-password-header {
     font-family: 'Noto Sans';
     font-style: normal;
