--- a/src/components/forgotPasswordMessage/ForgotPasswordMessage.scss
+++ b/src/components/forgotPasswordMessage/ForgotPasswordMessage.scss
@@ -12,7 +12,9 @@
     flex-direction: column;
     align-items: center;
   }
-
+  .col-forgot-password-message {
+    padding: 0%;
+  }
   .email-icon-header {
     height: 64px;
     width: 64px;
