--- a/src/components/forgotPassword/ForgotPassword.scss
+++ b/src/components/forgotPassword/ForgotPassword.scss
@@ -1,116 +1,149 @@
-@import "../../utils/variables.scss";
+@import '../../utils/variables.scss';
 
-.FORGOT-PASSWORD{
-    .forgot-password-container{
+.row.FORGOT-PASSWORD {
+  .forgot-password-container {
+    left: auto;
+    top: auto;
+    position: relative;
     height: 600px;
-    width: 1520px;
-    left: 0px;
-    top: 0px;
+    width: auto;
     border-radius: 0px;
-    background: linear-gradient(180deg, #0F2D58 0%, #2C5797 55.91%);
+    background: whitesmoke;
     border-radius: 0px;
     position: relative;
-    }
-
-    .forgot-password-header{
-    height: 33px;
-    width: 212px;
-    left: 660px;
-    top: 60px;
-    border-radius: nullpx;
+    padding: 20px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .col-forgot-password {
+    padding: 0%;
+  }
+  .forgot-password-header {
     font-family: 'Noto Sans';
     font-style: normal;
     font-size: 24px;
     font-weight: 700;
     line-height: 33px;
     letter-spacing: 0px;
-    text-align: left;
-    position: absolute;
-    color: #FFFFFF; 
-    }
+    text-align: center;
+    position: relative;
+    color: black;
+    margin-bottom: 20px;
+    height: auto;
+    width: auto;
+    left: auto;
+    top: 20px;
+  }
 
-    .forgot-password-content{
-    height: 38px;
-    width: 387px;
-    left: 570px;
-    top: 100px;
-    border-radius: nullpx;
+  .forgot-password-content {
+    height: auto;
+    width: auto;
+    left: auto;
+    top: auto;
     font-size: 14px;
     font-weight: 500;
     line-height: 19px;
     letter-spacing: 0px;
     text-align: center;
-    position: absolute;
     font-family: 'Noto Sans';
-    font-style: normal;   
-    color: #FFFFFF; 
-    }
-
-    .outlinebox{      
-    height: 219px;
-    width: 540px;
-    left: 500px;
-    top: 160px;
-    border-radius: 8px;
-    background: #FFFFFF;
-    position: absolute;
-    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.147044);    
-    }
-
-    .label{
-    height: 19px;
-    width: 334px;
-    left: 40px;
-    top: 40px;
-    border-radius: nullpx;
-    font-family: 'Nunito Sans';
     font-style: normal;
+    color: black;
+    margin-bottom: 20px;
+  }
+
+  .outlinebox {
+    height: auto;
+    left: auto;
+    top: auto;
+    width: 100%;
+    max-width: 540px;
+    border-radius: 8px;
+    background: #ffffff;
+    position: relative;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.147044);
+    padding: 20px;
+    box-sizing: border-box;
+    border: 1px solid black;
+  }
+
+  .label {
+    height: auto;
+    width: auto;
+    left: auto;
+    top: auto;
     font-size: 14px;
     font-weight: 400;
     line-height: 19px;
     letter-spacing: 0px;
     text-align: left;
-    position: absolute;
-    mix-blend-mode: normal;
-    opacity: 0.9; 
-    }
+    position: relative;
+    opacity: 0.9;
+    margin-bottom: 20px;
+  }
 
-    .inlinebox{
+  .inlinebox {
+    left: auto;
+    top: auto;
     height: 48px;
-    width: 480px;
-    left: 0px;
-    top: 30px;
+    width: 100%;
     border-radius: 8px;
-    background: #F6F6F6;
-    position: absolute;
-    }
+    background: #f6f6f6;
+    position: relative;
+  }
 
-    .button-box{
+  .button-box {
+    left: auto;
+    top: auto;
     height: 48px;
-    width: 480px;
-    left: 0px;
-    top: 100px;
+    width: 100%;
     border-radius: 8px;
-    background: #FF3E06;
-    border: 1x solid #FF3E06;
-    position: absolute;
+    background-color: #ff3c00;
+    border: 1px solid #ff3e06;
+    position: relative;
+  }
 
-    }
-
-    .submit-button{
+  button:disabled {
+    cursor: not-allowed;
+    pointer-events: all !important;
+  }
+  .submit-button {
+    left: auto;
+    top: auto;
     height: 48px;
-    width: 480px;
-    left: 0px;
-    top: 0px;
+    width: 100%;
     border-radius: 8px;
-    font-family: 'Noto Sans';
     font-style: normal;
-    font-size: 14px;
-    font-weight: 700;
     line-height: 20px;
     letter-spacing: 0px;
     text-align: center;
-    position: absolute;
-    color: #FFFFFF;
+    position: relative;
+    color: #ffffff;
+    background-color: #ff3c00;
+    border: 1px solid #ff3e06;
+  }
+
+  // Media queries for responsiveness
+  @media (max-width: 768px) {
+    .forgot-password-container {
+      height: 100%;
+      padding: 10px;
     }
+
+    .outlinebox {
+      max-width: 100%;
+    }
+  }
+
+  @media (max-width: 575px) {
+    .forgot-password-container {
+      padding: 10px;
+    }
+
+    .outlinebox {
+      width: 100%;
+      max-width: 100%;
+    }
+  }
 }
