updated reset password

--- a/src/components/resetPassword/ResetPassword.scss
+++ b/src/components/resetPassword/ResetPassword.scss
@@ -1,7 +1,7 @@
-@import "../../utils/variables.scss";
+@import '../../utils/variables.scss';
 
-.row-RESET-PASSWORD{
-  .reset-password-message-container{
+.row-RESET-PASSWORD {
+  .reset-password-message-container {
     height: 600px;
     border-radius: 0px;
     background: whitesmoke;
@@ -12,18 +12,18 @@
     flex-direction: column;
     align-items: center;
   }
-
+  .red-asterick {
+    color: red;
+  }
   .col-RESET-PASSWORD {
     padding: 0%;
   }
 
-  .message-header-content{
-    height: 38px;
+  .message-header-content {
     width: auto;
     left: auto;
-    top: 60px;
+    top: 40px;
     border-radius: nullpx;
-    font-family: Noto Sans;
     font-style: normal;
     font-size: 14px;
     font-weight: 500;
@@ -35,13 +35,12 @@
     color: black;
   }
 
-  .message-header-content-1{
+  .message-header-content-1 {
     height: 33px;
     width: auto;
     left: auto;
     top: -40px;
     border-radius: nullpx;
-    font-family: Noto Sans;
     font-size: 24px;
     font-weight: 700;
     line-height: 33px;
@@ -53,32 +52,27 @@
     color: black;
   }
 
-  .outside-box{
-    // height: 400px;
-    // width: 540px;
-    // left: 515px;
-    // top: 150px;
-    // border-radius: 8px;
-    // position: absolute;
-    // background: #FFFFFF;
-    // box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.147044); 
-    // border: 1x solid #FF3E06;
-    height: 400px;
+  .outside-box {
+    height: 900px;
     left: auto;
-    top: 20px;
     width: 100%;
     max-width: 540px;
     border-radius: 8px;
     background: #ffffff;
     position: relative;
-    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.147044);
     padding: 20px;
-    box-sizing: border-box;
     border: 1px solid black;
   }
 
-
-  .temporary-password{
+  .temporary-password {
+    height: 67px;
+    width: auto;
+    left: auto;
+    top: 280px;
+    border-radius: 8px;
+    position: relative;
+  }
+  .email {
     height: 67px;
     width: auto;
     left: auto;
@@ -86,13 +80,12 @@
     border-radius: 8px;
     position: relative;
   }
-  .label2{
+  .label2 {
     height: 20px;
     width: auto;
     left: auto;
     top: -260px;
     border-radius: nullpx;
-    font-family: Nunito Sans;
     font-style: normal;
     font-size: 14px;
     font-weight: 400;
@@ -106,7 +99,7 @@
     color: black;
   }
 
-  .inlinebox-3{
+  .inlinebox-3 {
     height: 48px;
     width: 100%;
     left: auto;
@@ -116,28 +109,24 @@
     // borders-color: #0b0b0bd6;
     background: #f6f6f6;
     position: relative;
-    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.147044);
     padding: 20px;
-    box-sizing: border-box;
     border: 1px solid black;
   }
 
-
-  .new-password{
-    height: 67px;
+  .new-password {
+    height: 83px;
     width: auto;
     left: auto;
-    top: 180px;
+    top: 210px;
     border-radius: 8px;
     position: relative;
   }
-  .label{
+  .label {
     height: 20px;
     width: auto;
     left: auto;
     top: -160px;
-    border-radius: nullpx;
-    font-family: Nunito Sans;
+    border-radius: 1px;
     font-style: normal;
     font-size: 14px;
     font-weight: 400;
@@ -151,7 +140,7 @@
     color: black;
   }
 
-  .inlinebox{
+  .inlinebox {
     height: 48px;
     width: 100%;
     left: auto;
@@ -161,28 +150,25 @@
     // borders-color: #0b0b0bd6;
     background: #f6f6f6;
     position: relative;
-    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.147044);
     padding: 20px;
-    box-sizing: border-box;
     border: 1px solid black;
   }
 
-  .confirm-password{
-    height: 67px;
+  .confirm-password {
+    height: 68px;
     width: auto;
     left: auto;
-    top: 130px;
+    top: 140px;
     border-radius: 8px;
     position: relative;
   }
 
-  .label1{
+  .label1 {
     height: 20px;
     width: auto;
     left: auto;
     top: -60px;
-    border-radius: nullpx;
-    font-family: Nunito Sans;
+    border-radius: 1px;
     font-style: normal;
     font-size: 14px;
     font-weight: 400;
@@ -195,8 +181,7 @@
     color: black;
   }
 
-
-  .inlinebox-1{
+  .inlinebox-1 {
     height: 48px;
     width: 100%;
     left: auto;
@@ -206,28 +191,23 @@
     // borders-color: #0b0b0bd6;
     background: #f6f6f6;
     position: relative;
-    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.147044);
     padding: 20px;
-    box-sizing: border-box;
     border: 1px solid black;
   }
 
-  .button-box{
-    top: 110px;
+  .button-box {
+    top: 115px;
     left: auto;
-   // top: auto;
+    // top: auto;
     height: 48px;
     width: auto;
     max-width: 540px;
     border-radius: 10px;
     background-color: #ff3c00;
-    border: 1px solid black;
     position: relative;
-    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.147044);
-    box-sizing: border-box;
   }
 
-  .submit-button{
+  .submit-button {
     left: auto;
     top: auto;
     height: 48px;
@@ -235,7 +215,6 @@
     max-width: 540px;
     border-radius: 10px;
     font-style: normal;
-    font-family: 'Noto Sans';
     font-size: 14px;
     font-weight: 700;
     line-height: 20px;
@@ -245,78 +224,70 @@
     color: #ffffff;
     background-color: #ff3c00;
     border: 1px solid black;
-    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.147044);
-    box-sizing: border-box;
   }
 
-
-
-    // Media queries for responsiveness
-    @media (max-width: 768px) {
-
-      .reset-password-message-container {
-        padding: 10px;
-      }
-
-      .outside-box {
-        max-width: 100%;
-      }
-
-      .inlinebox {
-        max-width: 100%;
-      }
-      .inlinebox-1 {
-        max-width: 100%;
-      }
-      .inlinebox-3 {
-        max-width: 100%;
-      }
-
-      .button-box {
-        max-width: 100%;
-        top: 100px;
-      }
-
-      .submit-button {
-        max-width: 100%;
-      }
-    }
-  
-    @media (max-width: 575px) {
-
-      .reset-password-message-container {
-        padding: 10px;
-      }
-
-      .outside-box {
-        width: 100%;
-        max-width: 100%;
-      }
-
-      .inlinebox {
-        width: 100%;
-        max-width: 100%;
-      }
-      .inlinebox-1 {
-        width: 100%;
-        max-width: 100%;
-      }
-      .inlinebox-3 {
-        width: 100%;
-        max-width: 100%;
-      }
-
-      .button-box {
-        width: 100%;
-        max-width: 100%;
-        top: 100px;
-      }
-
-      .submit-button {
-        width: 100%;
-        max-width: 100%;
-      }
+  // Media queries for responsiveness
+  @media (max-width: 768px) {
+    .reset-password-message-container {
+      padding: 10px;
     }
 
+    .outside-box {
+      max-width: 100%;
+    }
 
+    .inlinebox {
+      max-width: 100%;
+    }
+    .inlinebox-1 {
+      max-width: 100%;
+    }
+    .inlinebox-3 {
+      max-width: 100%;
+    }
+
+    .button-box {
+      max-width: 100%;
+      top: 100px;
+    }
+
+    .submit-button {
+      max-width: 100%;
+    }
+  }
+
+  @media (max-width: 575px) {
+    .reset-password-message-container {
+      padding: 10px;
+    }
+
+    .outside-box {
+      width: 100%;
+      max-width: 100%;
+    }
+
+    .inlinebox {
+      width: 100%;
+      max-width: 100%;
+    }
+    .inlinebox-1 {
+      width: 100%;
+      max-width: 100%;
+    }
+    .inlinebox-3 {
+      width: 100%;
+      max-width: 100%;
+    }
+
+    .button-box {
+      width: 100%;
+      max-width: 100%;
+      top: 100px;
+    }
+
+    .submit-button {
+      width: 100%;
+      max-width: 100%;
+    }
+  }
 }
