--- a/src/components/login/Login.scss
+++ b/src/components/login/Login.scss
@@ -14,6 +14,9 @@
 
   .login-box {
     padding: 10% 13%;
+  }
+
+  .main-login-bg {
     background: whitesmoke;
   }
 
@@ -48,7 +51,7 @@
     background: url('../../assets/icons/jjc-login-icon.svg');
     background-repeat: no-repeat;
     background-size: cover;
-  }
+  }  
 
   .submit-button {
     border: 1px solid $vividred;
@@ -74,6 +77,12 @@
     color: $white;
     background: $vividred;
     border: 1px solid $vividred;
+  }
+
+  @media (max-width: 768px) {
+    .login-box {
+      padding: 2%;
+    }
   }
 
   //.label{
