Phone Field css

--- a/src/components/register/Register.scss
+++ b/src/components/register/Register.scss
@@ -42,6 +42,12 @@
   color: black;
 }
 
+.phone-button {
+  input {
+    width: inherit !important;
+  }
+}
+
 @media (max-width: 768px) {
   .register-box {
     padding: 2%;
