--- a/src/components/TermAndCondition/TermAndCondition.scss
+++ b/src/components/TermAndCondition/TermAndCondition.scss
@@ -1,7 +1,34 @@
-.TermAndCondition-container{
-    margin: 0;
-  }
-  .TermAndCondition-text{
+  .TermAndCondition-container{
+  margin: 0;
+  padding-left: 10%;
+  padding-right: 10%;
+}
+.TermAndCondition-text{
 
-    margin-top: 2%;
-  }
+  margin-top: 2%;
+}
+.TermAndConditionimage {
+  width: 100%;
+  max-width: 100%; /* Ensure the image does not exceed its original size */
+  height: 370px;
+  left: 0px;
+  border-radius: 0px;
+  top: 193px;
+  background: linear-gradient(0deg, rgba(30, 35, 80, 0.8), rgba(30, 35, 80, 0.8)), url(../../assets/images/MissionVission.png), #1E2350;
+  background-repeat: no-repeat;
+  background-position: center;
+  /* Inside auto layout */
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+}
+strong{
+font-weight: 900;
+}
+p{
+font-weight: 400;
+}
+b{
+font-weight: 750;
+}
+
