--- a/src/pages/landingpage/components/aboutUs/AboutUs.scss
+++ b/src/pages/landingpage/components/aboutUs/AboutUs.scss
@@ -1,104 +1,290 @@
+// @import "../../../../utils/variables.scss";
+
+// .AboutUsPage{
+// .AboutUS
+// {
+//     border-radius: [object Object]px;
+//     position: relative;
+//     width: 1283px;
+//     height: 500px;
+//     left: 84px;
+// }
+
+// .content
+// {
+//     height: 57px;
+//     width: 624px;
+//     left: 750px;
+//     top: 280px;
+//     border-radius: nullpx;
+//     font-family: Nunito Sans;
+//     font-size: 14px;
+//     font-weight: 400;
+//     line-height: 19px;
+//     letter-spacing: 0px;
+//     text-align: left;
+//     position: absolute;
+//     font-style: normal;
+//     color: #000000;
+// }
+// .content1
+// {
+//     position: absolute;
+//     width: 624px;
+//     height: 112px;
+//     left: 750px;
+//     top: 130px;
+//     font-family: 'Nunito Sans';
+//     font-style: italic;
+//     font-weight: 400;
+//     font-size: 24px;
+//     line-height: 36px;
+//     /* or 150% */
+//     color: #000000;
+// }
+
+// .aboutUsImage
+// {
+//     /* Bitmap */
+//     position: absolute;
+//     width: 624px;
+//     height: 341px;
+//     left: 70px;
+//     top: 100px;
+//     background: url(../../../../assets/images/Bitmap.png);
+//     border-radius: 0px;
+// }
+// .knowMore
+// {
+//     /* Know More */
+
+//     position: absolute;
+//     width: 100px;
+//     height: 50px;
+//     left: 750px;
+//     top: 360px;
+
+//     font-family: 'Noto Sans';
+//     font-style: normal;
+//     font-weight: 700;
+//     font-size: 14px;
+//     line-height: 20px;
+//     /* identical to box height, or 143% */
+//     border-radius: nullpx;
+//     border-color: #FF3C00;
+//     color: #FF3C00;
+// }
+// .aboutUsHeading
+// {
+//     text-align: center;
+//     position: absolute;
+//     // width: 100px;
+//     // height: 27px;
+//     left: 650px;
+//     top: 50px;
+
+//     font-family: 'Noto Sans';
+//     font-style: normal;
+//     font-weight: 500;
+//     font-size: 20px;
+//     line-height: 27px;
+
+//     color: #000000;
+//     border-radius: nullpx;
+// }
+// .about-us {
+//     border-color: $vividred;
+//     width: 2rem;
+//     margin-top: -2px;
+//   }
+
+// }
+
+//part 2
+
 @import "../../../../utils/variables.scss";
 
-.AboutUsPage{
+// .AboutUsPage {
+//   .AboutUS {
+//     border-radius: [object Object]px;
+//     position: relative;
+//     width: 1283px;
+//     height: 500px;
+//     left: 84px;
+//   }
 
-.AboutUS
-{
-    border-radius: [object Object]px;
-    position: relative;
-    width: 1283px;
-    height: 500px;
-    left: 84px;
+//   .content {
+//     height: 57px;
+//     width: 624px;
+//     left: 750px;
+//     top: 280px;
+//     border-radius: nullpx;
+//     font-family: Nunito Sans;
+//     font-size: 14px;
+//     font-weight: 400;
+//     line-height: 19px;
+//     letter-spacing: 0px;
+//     text-align: left;
+//     position: absolute;
+//     font-style: normal;
+//     color: #000000;
+//     width: 100%; // Set width to 100% on small screens
+//       left: 0; // Remove left positioning on small screens
+//       top: 240px; // Adjust top positioning for smaller screens
+//   }
+
+//   .content1 {
+//     position: absolute;
+//     width: 624px;
+//     height: 112px;
+//     left: 750px;
+//     top: 130px;
+//     font-family: 'Nunito Sans';
+//     font-style: italic;
+//     font-weight: 400;
+//     font-size: 24px;
+//     line-height: 36px;
+//     /* or 150% */
+//     color: #000000;
+//   }
+
+//   .aboutUsImage {
+//     /* Bitmap */
+//     position: absolute;
+//     width: 624px;
+//     height: 341px;
+//     left: 70px;
+//     top: 100px;
+//     background: url(../../../../assets/images/Bitmap.png);
+//     border-radius: 0px;
+//     width: 100%; // Set width to 100% on small screens
+//     height: auto; // Set height to auto to maintain aspect ratio
+//     top: 0; // Remove top positioning on small screens
+//     left: 0; // Remove left positioning on small screens
+//   }
+
+//   .knowMoreBox {
+//     /* Know More */
+//     position: absolute;
+//     width: 100px;
+//     height: 50px;
+//     left: 750px;
+//     top: 360px;
+//     font-family: 'Noto Sans';
+//     font-style: normal;
+//     font-weight: 700;
+//     font-size: 14px;
+//     line-height: 20px;
+//     /* identical to box height, or 143% */
+//     border-radius: nullpx;
+//     border-color: #FF3C00;
+//     color: #FF3C00;
+//   }
+
+//   .aboutUsHeading {
+//     text-align: center;
+//     position: absolute;
+//     /* width: 100px;
+//     height: 27px; */
+//     left: 650px;
+//     top: 50px;
+//     font-family: 'Noto Sans';
+//     font-style: normal;
+//     font-weight: 500;
+//     font-size: 20px;
+//     line-height: 27px;
+//     color: #000000;
+//     border-radius: nullpx;
+//   }
+
+//   .about-us {
+//     border-color: $vividred;
+//     width: 2rem;
+//     margin-top: -2px;
+//   }
+
+//   /* Media Queries */
+//   @media screen and (max-width: 1440px) {
+//     .AboutUS {
+//       width: 90%;
+//       height: 400px;
+//       left: 5%;
+//     }
+//     .content,
+//     .content1,
+//     .knowMore,
+//     .aboutUsHeading {
+//       width: 80%;
+//       left: 10%;
+//     }
+//     .content {
+//       top: 290px;
+//     }
+//     .content1 {
+//       top: 100px;
+//     }
+//     .aboutUsImage {
+//       width: 80%;
+//       height: 250px;
+//       left: 10%;
+//       top: 100px;
+//     }
+//     .knowMore {
+//       top: 320px;
+//     }
+//     .aboutUsHeading {
+//       top: 40px;
+//     }
+
+//   }
+
+// }
+
+// part 3
+
+
+
+.aboutUsImage {
+  height: 300px;
+  background-color: #ccc;
+  background: url(../../../../assets/images/Bitmap.png);
+  background-size: cover;
+  background-position: center;
 }
 
-.content
-{
-    height: 57px;
-    width: 624px;
-    left: 750px;
-    top: 280px;
-    border-radius: nullpx;
-    font-family: Nunito Sans;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 19px;
-    letter-spacing: 0px;
-    text-align: left;
-    position: absolute;
-    font-style: normal;
-    color: #000000;
-}
-.content1
-{
-    position: absolute;
-    width: 624px;
-    height: 112px;
-    left: 750px;
-    top: 130px;
-    font-family: 'Nunito Sans';
-    font-style: italic;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 36px;
-    /* or 150% */
-    color: #000000;
+.aboutUsHeading {
+  text-align: center;
 }
 
-.aboutUsImage
-{
-    /* Bitmap */
-    position: absolute;
-    width: 624px;
-    height: 341px;
-    left: 70px;
-    top: 100px;
-    background: url(../../../../assets/images/Bitmap.png);
-    border-radius: 0px;
-}
-.knowMore
-{
-    /* Know More */
-
-    position: absolute;
-    width: 100px;
-    height: 50px;
-    left: 750px;
-    top: 360px;
-
-    font-family: 'Noto Sans';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 20px;
-    /* identical to box height, or 143% */
-    border-radius: nullpx;
-    border-color: #FF3C00;
-    color: #FF3C00;
-}
-.aboutUsHeading
-{
-    text-align: center;
-    position: absolute;
-    // width: 100px;
-    // height: 27px;
-    left: 650px;
-    top: 50px;
-    
-    font-family: 'Noto Sans';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 27px;
-    
-    color: #000000;
-    border-radius: nullpx;
-}
 .about-us {
-    border-color: $vividred;
-    width: 2rem;
-    margin-top: -2px;
+  width: 4rem;
+  border-color: $vividred;
+}
+
+.knowMore {
+  /* Know More */
+
+  font-family: 'Noto Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 20px;
+  /* identical to box height, or 143% */
+  border-radius: nullpx;
+  border-color: #FF3C00;
+  color: #FF3C00;
+}
+
+@media only screen and (max-width: 767px) {
+  .aboutUsImage {
+    height: 300px;
   }
 
+  .knowMoreBox {
+    text-align: center;
+  }
+
+  .knowMore {
+    display: inline-block;
+  }
 }
-
-
