--- a/src/components/events/PastEventsCard.scss
+++ b/src/components/events/PastEventsCard.scss
@@ -4,12 +4,26 @@
     }
 
     .card {
-        margin-bottom: 15px;
+        margin-bottom: 25px;
     }
 
     button {
         background-color: #415C83 !important;
     }
+
+    p {
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        text-overflow: ellipsis;
+        overflow: hidden;
+    }
+
+    .btn-primary:focus {
+        outline: none;
+        box-shadow: none;
+    }
+
 }
 
 .events {
