--- a/src/components/register/Register.scss
+++ b/src/components/register/Register.scss
@@ -41,3 +41,15 @@
 .login-link:hover {
   color: black;
 }
+
+.phone-button {
+  input {
+    width: inherit !important;
+  }
+}
+
+@media (max-width: 768px) {
+  .register-box {
+    padding: 2%;
+  }
+}
