Eye Icon In Reset Password (#169)
* Eye Icon In Reset Password

* Fixed issue with show/hide password

* Removed

---------

Co-authored-by: Nishit Gopani <nishitgopani@gmail.com>
Co-authored-by: Visesh <viseshjain.99@gmail.com>

--- a/src/components/resetPassword/ResetPassword.scss
+++ b/src/components/resetPassword/ResetPassword.scss
@@ -112,6 +112,13 @@
     padding: 20px;
     border: 1px solid black;
   }
+  .password-toggle {
+    position: absolute;
+    top: 250%;
+    right: 10px;
+    transform: translateY(-50%);
+    cursor: pointer;
+  }
 
   .new-password {
     height: 83px;
@@ -153,6 +160,13 @@
     padding: 20px;
     border: 1px solid black;
   }
+  .password-toggle1 {
+    position: absolute;
+    top: 250%;
+    right: 10px;
+    transform: translateY(-50%);
+    cursor: pointer;
+  }
 
   .confirm-password {
     height: 68px;
@@ -193,6 +207,13 @@
     position: relative;
     padding: 20px;
     border: 1px solid black;
+  }
+  .password-toggle2 {
+    position: absolute;
+    top: 250%;
+    right: 10px;
+    transform: translateY(-50%);
+    cursor: pointer;
   }
 
   .button-box {
