--- a/src/components/events/PastEventsCard.scss
+++ b/src/components/events/PastEventsCard.scss
@@ -1,5 +1,5 @@
-.modal-body {
-    height: 900px;
+.events_modal{
+    height: 100%;
 }
 
 .past_events {
@@ -9,6 +9,8 @@
 
     .card {
         margin-bottom: 25px;
+        border-radius:30px;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     }
 
     button {
@@ -40,7 +42,7 @@
 
 @media (min-width: 300px) and (max-width: 991px) {
     .modal-body {
-        height: 1400px;
+        height: 100%;
     }
 
     .my-modal {
