--- a/src/components/events/PastEventsCard.scss
+++ b/src/components/events/PastEventsCard.scss
@@ -1,67 +1,97 @@
-.events_modal{
-    height: 100%;
+.events_modal {
+  height: 100%;
 }
 
 .past_events {
-    .card img {
-        height: 500px;
+  .card img {
+    width: 100%;
+    height: 50%; // Adjust the height as needed
+    object-fit: cover;
+    object-position: top;
+  }
+
+  .card {
+    margin-bottom: 25px;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+    height: 510px; // Set a fixed height for the card
+
+    &:hover {
+      transform: scale(1.05);
     }
 
-    .card {
-        margin-bottom: 25px;
-        border-radius:30px;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    .card-title {
+      margin-bottom: 8px;
+      color: #ff3c00;
+      font-weight: 800;
     }
-
-    button {
-        background-color: #415C83 !important;
+    .card-date-text {
+      color: #2c5797;
+      font-weight: 700;
     }
-
-    p {
-        display: -webkit-box;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
-        text-overflow: ellipsis;
-        overflow: hidden;
+    .card-speaker-text {
+      font-weight: 800;
     }
-
-    .btn-primary:focus {
-        outline: none;
-        box-shadow: none;
+    .card-description-text {
+      font-weight: 500;
     }
+  }
 
+  button {
+    background-color: #415c83 !important;
+  }
+
+  p {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+
+  .btn-primary:focus {
+    outline: none;
+    box-shadow: none;
+  }
 }
 
 .events {
-    .past_events {
-        .card {
-            width: 400px;
-        }
+  .past_events {
+    .card {
+      width: 400px;
     }
+  }
 }
 
 @media (min-width: 300px) and (max-width: 991px) {
-    .modal-body {
-        height: 100%;
-    }
+  .modal-body {
+    height: 100%;
+  }
 
-    .my-modal {
-        width: 90% !important;
-        max-width: 100% !important;
-    }
+  .my-modal {
+    width: 90% !important;
+    max-width: 100% !important;
+  }
 
+  .past_events {
+    .card img {
+      width: 100%;
+      height: 50%; // Adjust the height as needed
+      object-fit: cover;
+      object-position: top;
+    }
+  }
+
+  .events {
     .past_events {
-        .card img {
-            height: 350px;
-        }
+      .card {
+        width: 100%;
+      }
     }
-
-    .events {
-        .past_events {
-            .card {
-                width: 100%;
-            }
-        }
-    }
-
+  }
 }
