more changes to events...

--- a/src/components/events/PastEventsModal.scss
+++ b/src/components/events/PastEventsModal.scss
@@ -10,7 +10,7 @@
       overflow: hidden;
       border-top-left-radius: 15px;
       border-top-right-radius: 15px;
-      border: 2px solid #ddd;
+      border: 2px solid black;
 
       img {
         width: 100%;
