--- a/src/components/customDropdown/CustomDropdown.scss
+++ b/src/components/customDropdown/CustomDropdown.scss
@@ -58,6 +58,7 @@
   &:hover,
   &:focus {
     background-color: $white !important;
+    color: $charcoalBlack !important;
     box-shadow: none;
     font-weight: $bold !important;
     opacity: 100% !important;
