Some more changes to events....

--- a/src/components/events/PastEventsModal.scss
+++ b/src/components/events/PastEventsModal.scss
@@ -60,6 +60,24 @@
         line-height: 1.5;
       }
     }
+    .speaker-host {
+      .speaker-details {
+        margin-bottom: 15px;
+      }
+
+      .speaker-name {
+        font-weight: bold;
+        margin-bottom: 5px;
+      }
+
+      .speaker-details1 {
+        font-weight: bold;
+        margin-bottom: 10px;
+      }
+      .speaker-details2 {
+        margin-bottom: 5px;
+      }
+    }
 
     .resources-section {
       .resource-link {
