--- a/src/components/events/EventsCard.scss
+++ b/src/components/events/EventsCard.scss
@@ -2,7 +2,8 @@
   height: 100%;
 }
 
-.past_events {
+.past_events,
+.ongoing_events {
   .card img {
     width: 100%;
     height: 50%; // Adjust the height as needed
